--- a/catalog.html
+++ b/catalog.html
@@ -1,192 +1,194 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML Academy: Девайс-Моноподы для селфи</title>
-    </head>
-		<body>
-            <header class="main-header">
-                <div class="container">
-                    <div class="header-logo">
-                        <a href="index.html"><img src="#" width="163" height="35" alt="device"></a>
-                    </div>
-                    <div class="user-block">
-                        <form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
-                            <input type="search" name="search" placeholder="Поиск по сайту"> 
-                            <input type="submit" value="Найти">
-                        </form>
-                        <ul>    
-                            <li><a class="login" href="#">Войти</a></li>
-                            <li><a class="сompare" href="#">Сравнить</a></li>
-                            <li><a class="basket" href="#">Корзина</a></li>
-                        </ul>
-                    </div>
-                    <nav class="main-nav">
-                        <ul>
-                            <li><a href="#">Каталог товаров</a>
-                                <ul class="catalog">
-                                    <li><a href="#">Виртуальная реальность</a></li>
-                                    <li><a href="#">Фитнес-браслеты</a></li>
-                                    <li><a href="#">Квардрокоптеры</a></li>
-                                    <li><a>Моноподы для селфи</a></li>
-                                    <li><a href="#">Умные часы</a></li>
-                                    <li><a href="#">Экшн-камеры</a></li>        
-                                </ul>
-                            </li>
-                            <li><a href="#">Доставка</a></li>
-                            <li><a href="#">Гарантия</a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>
-			</header>
-			<h1 class="breadcrumbs-title">Моноподы для селфи</h1>
-			<div class="breadcrumbs">
-				<ul>
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Каталог товаров</a></li>
-					<li class="current"><a href="#">Моноподы для селфи</a></li>
-				</ul>
-			</div>
-			<main class="catalog-section">
-				<aside class="filter">
-					<header class="filter-header">
-						<h3>Фильтр:</h3>
-					</header>
-					<section class="filter-form">
-						<form action="https://echo.htmlacademy.ru" method="get">
-							<fieldset class="price">
-								<legend>Стоимость</legend>
-								<label for="price-id">Стоимость</label>
-								<input type="range" name="price" min="0" max="5000" step="1" id="price-id">
-								<span>от 0</span>
-								<span>до 5000</span>
-							</fieldset>
-							<fieldset class="color">
-								<legend>Цвет</legend>
-								<input type="checkbox" name="black" id="black">
-								<label for="black">Черный</label>
-								<input type="checkbox" name="white" id="white">
-								<label for="white">Белый</label>
-								<input type="checkbox" name="blue" id="blue">
-								<label for="blue">Синий</label>
-								<input type="checkbox" name="red" id="red">
-								<label for="red">Красный</label>
-								<input type="checkbox" name="pink" id="pink">
-								<label for="pink">Розовый</label>
-							</fieldset>
-							<fieldset class="bluetooth">
-								<legend>Bluetooth</legend>
-								<input type="radio" name="bluetooth" value="yes" id="bt-yes">
-								<label for="bt-yes">Есть</label>
-								<input type="radio" name="bluetooth" value="no" id="bt-no">
-								<label for="bt-no">Нет</label>
-								</fieldset>
-							<input type="submit" class="btn" value="Показать">
-						</form>
-					</section>
-				</aside>
-				<section class="sorting">
-					<header class="sorting-header">
-						<h3>Сортировка:</h3>
-						<ul class="sorting-option">
-							<li class="by-price"><a href="#">По цене</a></li>
-							<li class="by-type"><a href="#">По типу</a></li>
-							<li class="by-popular"><a href="#">По пулярности</a></li>
-						</ul>
-						<div class="">Прокрутка</div>
-					</header>
-					<div class="catalog">
-						<div class="catalog-items">
-							<div class="item">
-								<div class="item-card">
-									<img src="#" width="360" height="380" alt="Любительская селфи-палка">
-									<ul>
-										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a href="#">Добавить к сравнению</a></li>
-									</ul>
-								</div>
-								<span>Любительская селфи-палка</span>
-								<span class="price">500 руб.</span>
-							</div>
-							<div class="item">
-								<div class="item-card">
-									<img src="#" width="360" height="380" alt="Профессиональная селфи-палка">
-									<ul>
-										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a href="#">Добавить к сравнению</a></li>
-									</ul>
-								</div>
-								<span>Профессиональная селфи-палка</span>
-								<span class="price">1 500 руб.</span>
-							</div>
-							<div class="item">
-								<div>
-									<img src="#" width="360" height="380" alt="Непотопляемая селфи-палка">
-									<ul>
-										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a href="#">Добавить к сравнению</a></li>
-									</ul>
-								</div>
-								<span>Непотопляемая селфи-палка</span>
-								<span class="price">2 500руб.</span>
-							</div>
-							<div class="item">
-								<div>
-									<img src="#" width="360" height="380" alt="Селфи-палка Следуй за мной">
-									<ul>
-										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a href="#">Добавить к сравнению</a></li>
-									</ul>
-								</div>
-								<span>Селфи палка Следуй за мной</span>
-								<span class="price">4 900 руб.</span>
-							</div>
-						</div>
-						<div class="paginator">
-							<ul>
-								<li><a class="prev" href="#prev">Назад</a></li>
-								<li><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a class="next" href="#next">Вперёд</a></li>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Academy: Девайс-Моноподы для селфи</title>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<header class="main-header">
+			<div class="container">
+				<div class="header-logo">
+					<a href="index.html"><img src="img/logo.png" width="163" height="35" alt="device"></a>
+				</div>
+				<div class="user-block">
+					<form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
+						<input type="search" name="search" placeholder="Поиск по сайту"> 
+						<input type="submit" value="Найти">
+					</form>
+					<ul>    
+						<li><a class="login" href="#">Войти</a></li>
+						<li><a class="сompare" href="#">Сравнить</a></li>
+						<li><a class="basket" href="#">Корзина</a></li>
+					</ul>
+				</div>
+				<nav class="main-nav">
+					<ul>
+						<li><a href="#">Каталог товаров</a>
+							<ul class="catalog">
+								<li><a href="#">Виртуальная реальность</a></li>
+								<li><a href="#">Фитнес-браслеты</a></li>
+								<li><a href="#">Квардрокоптеры</a></li>
+								<li><a>Моноподы для селфи</a></li>
+								<li><a href="#">Умные часы</a></li>
+								<li><a href="#">Экшн-камеры</a></li>        
 							</ul>
+						</li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Гарантия</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<h1 class="breadcrumbs-title">Моноподы для селфи</h1>
+		<div class="breadcrumbs">
+			<ul>
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Каталог товаров</a></li>
+				<li class="current"><a href="#">Моноподы для селфи</a></li>
+			</ul>
+		</div>
+		<main class="catalog-section">
+			<aside class="filter">
+				<header class="filter-header">
+					<h3>Фильтр:</h3>
+				</header>
+				<section class="filter-form">
+					<form action="https://echo.htmlacademy.ru" method="get">
+						<fieldset class="price">
+							<legend>Стоимость</legend>
+							<label for="price-id">Стоимость</label>
+							<input type="range" name="price" min="0" max="5000" step="1" id="price-id">
+							<span>от 0</span>
+							<span>до 5000</span>
+						</fieldset>
+						<fieldset class="color">
+							<legend>Цвет</legend>
+							<input type="checkbox" name="black" id="black">
+							<label for="black">Черный</label>
+							<input type="checkbox" name="white" id="white">
+							<label for="white">Белый</label>
+							<input type="checkbox" name="blue" id="blue">
+							<label for="blue">Синий</label>
+							<input type="checkbox" name="red" id="red">
+							<label for="red">Красный</label>
+							<input type="checkbox" name="pink" id="pink">
+							<label for="pink">Розовый</label>
+						</fieldset>
+						<fieldset class="bluetooth">
+							<legend>Bluetooth</legend>
+							<input type="radio" name="bluetooth" value="yes" id="bt-yes">
+							<label for="bt-yes">Есть</label>
+							<input type="radio" name="bluetooth" value="no" id="bt-no">
+							<label for="bt-no">Нет</label>
+						</fieldset>
+						<input type="submit" class="btn" value="Показать">
+					</form>
+				</section>
+			</aside>
+			<section class="sorting">
+				<header class="sorting-header">
+					<h3>Сортировка:</h3>
+					<ul class="sorting-option">
+						<li class="by-price"><a href="#">По цене</a></li>
+						<li class="by-type"><a href="#">По типу</a></li>
+						<li class="by-popular"><a href="#">По пулярности</a></li>
+					</ul>
+					<div class="">Прокрутка</div>
+				</header>
+				<div class="catalog">
+					<div class="catalog-items">
+						<div class="item">
+							<div class="item-card">
+								<img src="img/easy-selfie.jpg" width="360" height="380" alt="Любительская селфи-палка">
+								<ul>
+									<li><a class="btn" href="#">В корзину</a></li>
+									<li><a href="#">Добавить к сравнению</a></li>
+								</ul>
+							</div>
+							<span>Любительская селфи-палка</span>
+							<span class="price">500 руб.</span>
+						</div>
+						<div class="item">
+							<div class="item-card">
+								<img src="img/pro-selfie.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+								<ul>
+									<li><a class="btn" href="#">В корзину</a></li>
+									<li><a href="#">Добавить к сравнению</a></li>
+								</ul>
+							</div>
+							<span>Профессиональная селфи-палка</span>
+							<span class="price">1 500 руб.</span>
+						</div>
+						<div class="item">
+							<div>
+								<img src="img/underwater-selfie.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+								<ul>
+									<li><a class="btn" href="#">В корзину</a></li>
+									<li><a href="#">Добавить к сравнению</a></li>
+								</ul>
+							</div>
+							<span>Непотопляемая селфи-палка</span>
+							<span class="price">2 500руб.</span>
+						</div>
+						<div class="item">
+							<div>
+								<img src="img/hand-selfie.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
+								<ul>
+									<li><a class="btn" href="#">В корзину</a></li>
+									<li><a href="#">Добавить к сравнению</a></li>
+								</ul>
+							</div>
+							<span>Селфи палка Следуй за мной</span>
+							<span class="price">4 900 руб.</span>
 						</div>
 					</div>
-				</section>
-			</main>
-			<footer class="footer">
-                <div class="container">  
-                    <div class="footer-top">
-                        <div class="footer-logo">
-                            <a href="index.html"><img src="#" width="163" height="35" alt="device"></a>
-                        </div>
-                        <ul>    
-                            <li><a class="login" href="#">Войти</a></li>
-                            <li><a class="сompare" href="#">Сравнить</a></li>
-                            <li><a class="Basket" href="#">Корзина</a></li>
-                        </ul>    
-                    </div>
-                    <div class="footer-middle">
-                        <p>г. Москва, ул. Строителей, 15</p>
-                        <div class="footer-nav">
-                            <ul>
-                                <li><a href="#">Доставка</a></li>
-                                <li><a href="#">Гарантия</a></li>
-                                <li><a href="#">Контакты</a></li>
-                            </ul>
-                        </div>
-                        <p>Тел.: +7 (495) 495-95-95</p>
-                    </div>
-                    <div class="footer-bottom">
-                        <div class="footer-social">
-                            <a class="social-btn fb" href="https://facebook.com/">Фейсбук</a>
-                            <a class="social-btn inst" href="https://instagram.com/">Инстаграм</a>
-                            <a class="social-btn tw" href="https://twitter.com/">Твиттер</a>
-                        </div>
-                        <a class="htmlacademy" href="https://htmlacademy.ru/"><img src="#" width="27" height="34" alt="htmlacademy"></a>
-                    </div>
-                </div>
-            </footer>
-		</body>
+					<div class="paginator">
+						<ul>
+							<li><a class="prev" href="#prev">Назад</a></li>
+							<li><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a class="next" href="#next">Вперёд</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<div class="container">  
+				<div class="footer-top">
+					<div class="footer-logo">
+						<a href="index.html"><img src="img/logo-footer.png" width="163" height="35" alt="device"></a>
+					</div>
+					<ul>    
+						<li><a class="login" href="#">Войти</a></li>
+						<li><a class="сompare" href="#">Сравнить</a></li>
+						<li><a class="Basket" href="#">Корзина</a></li>
+					</ul>    
+				</div>
+				<div class="footer-middle">
+					<p>г. Москва, ул. Строителей, 15</p>
+					<div class="footer-nav">
+						<ul>
+							<li><a href="#">Доставка</a></li>
+							<li><a href="#">Гарантия</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+					</div>
+					<p>Тел.: +7 (495) 495-95-95</p>
+				</div>
+				<div class="footer-bottom">
+					<div class="footer-social">
+						<a class="social-btn fb" href="https://facebook.com/">Фейсбук</a>
+						<a class="social-btn inst" href="https://instagram.com/">Инстаграм</a>
+						<a class="social-btn tw" href="https://twitter.com/">Твиттер</a>
+					</div>
+					<a class="htmlacademy" href="https://htmlacademy.ru/"><img src="img/htmlacademy.svg" width="27" height="34" alt="htmlacademy"></a>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
